# GeoMIP

./: CITATION.cff  Dataset_Description  README.md
data/: README.md
data/samples/: README.md
results/: README.md
src/: Method1_GPU_Accelerated_Geometric_aproach  README.md
src/Method1_GPU_Accelerated/: Metodo1.py
src/Method2_Dynamic_Programming_Reformulation/: README.md  exec.py  pyproject.toml  requirements.txt
src/Method2_Dynamic_Programming_Reformulation/src/: main.py
src/Method2_Dynamic_Programming_Reformulation/src/constants/: models.py
src/Method2_Dynamic_Programming_Reformulation/src/controllers/: manager.py
src/Method2_Dynamic_Programming_Reformulation/src/controllers/strategies/: force.py  geometric.py  phi.py  q_nodes.py
src/Method2_Dynamic_Programming_Reformulation/src/middlewares/: slogger.py
