[project]
name = "proyecto-2025a"
version = "0.1.0"
description = "Framework for the Minimal Information Partition problem."
readme = "README.md"
requires-python = ">=3.9.13"
dependencies = [
    "numpy==1.19.5",
    "pyphi==1.2.0",
    "openpyxl==3.1.3",
    "pandas==1.1.5",
    "pyinstrument==3.4.2",
    "pyttsx3==2.98",
    "colorama==0.4.5",
]